--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
               <div>Runze Wang<sup>2</sup>, </div>
             </span>
             <span class="author-block">
-              <div>Bin Ren<sup>1,3,4</sup>, </div>
+              <div>Bin Ren<sup>1</sup>, </div>
             </span>
             <span class="author-block">
-              <div>Guolei Sun<sup>5</sup>, </div>
+              <div>Guolei Sun<sup>3</sup>, </div>
             </span>
             <span class="author-block">
-              <div>Biao Gong<sup>6</sup>, </div>  
+              <div>Biao Gong<sup>4</sup>, </div>  
             </span> <br>
             <span class="author-block">
               <div>Yanwei Fu<sup>2</sup>, </div>
@@ -71,7 +71,7 @@
             </span>
           </div>
 
-          <h2><font color=#424949 size="3"> <sup>1</sup>INSAIT, <sup>2</sup>Fudan University, <sup>3</sup>University of Trento, <sup>4</sup>University of Pisa, <sup>5</sup>ETH Zurich, <sup>6</sup>Ant Group</font></h2>
+          <h2><font color=#424949 size="3"> <sup>1</sup>INSAIT, <sup>2</sup>Fudan University, <sup>3</sup>ETH Zurich, <sup>4</sup>Ant Group</font></h2>
 </font></h2>
           <br>
 
